--- a/7s.ipynb
+++ b/7s.ipynb
@@ -162,6 +162,33 @@
         "    except: pass\n",
         "    raise SystemExit(\"Cannot continue without Ollama.\")\n",
         "\n",
+        "# Wait for Ollama API before pulling models\n",
+        "import requests, time, subprocess\n",
+        "\n",
+        "print(\"⏳ Waiting for Ollama API to respond…\")\n",
+        "for i in range(60):\n",
+        "    try:\n",
+        "        r = requests.get(\"http://127.0.0.1:11434/api/tags\", timeout=5)\n",
+        "        if r.status_code == 200:\n",
+        "            print(\"✅ Ollama API ready.\")\n",
+        "            break\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "    time.sleep(2)\n",
+        "else:\n",
+        "    raise RuntimeError(\"Ollama API did not come up in time.\")\n",
+        "\n",
+        "# --- Pull models asynchronously ---\n",
+        "models = [\"mistral\", \"llama3\", \"gemma2:2b-instruct\"]  # use gemma2:2b or 9b instead of gemma3\n",
+        "models = [\"qwen3\", \"phi3\", \"llama3\"]\n",
+        "for m in models:\n",
+        "    print(f\"📥 Pulling {m} (this can take 10–20 min in Colab)…\")\n",
+        "    subprocess.Popen([\"ollama\", \"pull\", m])\n",
+        "    # give each pull a 30 s head start before next to avoid locking\n",
+        "    time.sleep(30)\n",
+        "\n",
+        "print(\"🕒 Now wait a few minutes before running analyses (pulls continue in background).\")\n",
+        "\n",
         "\n",
         "# ---------------------------\n",
         "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress + LOGGING)\n",
@@ -274,25 +301,48 @@
         "\n",
         "\n",
         "# Probe endpoints: prefer /api/chat, fallback to /api/generate\n",
-        "USE_GENERATE = False\n",
+        "# ---------------------------\n",
+        "# Wait for Ollama API to settle before ping\n",
+        "# ---------------------------\n",
+        "print(\"🕐 Waiting for Ollama to settle after large model pulls...\")\n",
+        "for i in range(30):  # ~90s total\n",
+        "    try:\n",
+        "        r = requests.get(TAGS, timeout=5)\n",
+        "        if r.status_code == 200:\n",
+        "            print(f\"✅ Ollama API responsive after {i*3}s\")\n",
+        "            break\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "    time.sleep(3)\n",
+        "else:\n",
+        "    raise RuntimeError(\"❌ Ollama API never became responsive after 90s wait.\")\n",
+        "\n",
+        "# Try longer timeout for the first ping\n",
         "try:\n",
-        "    pr = requests.post(CHAT, json={\"model\":PRIMARY_MODEL,\"messages\":[{\"role\":\"user\",\"content\":\"ping\"}],\"stream\":False}, timeout=10)\n",
+        "    pr = requests.post(\n",
+        "        CHAT,\n",
+        "        json={\"model\": PRIMARY_MODEL, \"messages\": [{\"role\": \"user\", \"content\": \"ping\"}], \"stream\": False},\n",
+        "        timeout=60,\n",
+        "    )\n",
         "    if pr.status_code == 404:\n",
-        "        gr = requests.post(GEN, json={\"model\":PRIMARY_MODEL,\"prompt\":\"ping\",\"stream\":False}, timeout=10)\n",
-        "        if gr.status_code == 200:\n",
-        "            USE_GENERATE=True\n",
-        "            print(\"ℹ️ Using /api/generate (no /api/chat).\")\n",
-        "        else:\n",
-        "            raise RuntimeError(f\"generate status {gr.status_code}\")\n",
-        "    elif pr.status_code != 200:\n",
-        "        raise RuntimeError(f\"chat status {pr.status_code}\")\n",
-        "except Exception:\n",
-        "    gr = requests.post(GEN, json={\"model\":PRIMARY_MODEL,\"prompt\":\"ping\",\"stream\":False}, timeout=10)\n",
-        "    if gr.status_code == 200:\n",
-        "        USE_GENERATE=True\n",
-        "        print(\"ℹ️ Using /api/generate (chat failed).\")\n",
+        "        USE_GENERATE = True\n",
+        "        print(\"ℹ️ Using /api/generate (chat not supported).\")\n",
         "    else:\n",
-        "        raise SystemExit(\"❌ Neither /api/chat nor /api/generate responded OK.\")\n",
+        "        USE_GENERATE = False\n",
+        "        print(\"✅ /api/chat responsive.\")\n",
+        "except Exception:\n",
+        "    print(\"⚠️ /api/chat timed out; trying /api/generate instead…\")\n",
+        "    gr = requests.post(\n",
+        "        GEN,\n",
+        "        json={\"model\": PRIMARY_MODEL, \"prompt\": \"ping\", \"stream\": False},\n",
+        "        timeout=60,\n",
+        "    )\n",
+        "    if gr.status_code == 200:\n",
+        "        USE_GENERATE = True\n",
+        "        print(\"✅ /api/generate responsive.\")\n",
+        "    else:\n",
+        "        raise SystemExit(\"❌ Neither /api/chat nor /api/generate responded after model load.\")\n",
+        "\n",
         "\n",
         "# ---------------------------\n",
         "# 3) PROMPT TEMPLATES (WRC wording)\n",
@@ -718,7 +768,7 @@
         "# ---------------------------\n",
         "# 4) OLLAMA CHAT HELPERS\n",
         "# ---------------------------\n",
-        "TEMPERATURE, TOP_P, REPEAT_PENALTY, TIMEOUT_S = 0.4, 0.9, 1.1, 120\n",
+        "TEMPERATURE, TOP_P, REPEAT_PENALTY, TIMEOUT_S = 0.4, 0.9, 1.1, 860\n",
         "\n",
         "def ask_llm(model: str, sys: str, user: str) -> str:\n",
         "    if USE_GENERATE:\n",
@@ -818,7 +868,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2GPkTylQUJt",
-        "outputId": "b5705da0-8a2b-476a-9f0f-4e48fb74c8ba"
+        "outputId": "117c9010-06dd-49b8-f2a4-9a31833162ab"
       },
       "execution_count": null,
       "outputs": [
@@ -826,7 +876,87 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🔧 Installing Ollama…\n"
+            "🔧 Installing Ollama…\n",
+            "🚀 Starting ollama serve…\n",
+            "⏳ Waiting for Ollama to become ready.\n",
+            "⏳ Waiting for Ollama API to respond…\n",
+            "✅ Ollama API ready.\n",
+            "📥 Pulling mistral (this can take 10–20 min in Colab)…\n",
+            "📥 Pulling llama3 (this can take 10–20 min in Colab)…\n",
+            "📥 Pulling gemma2:2b-instruct (this can take 10–20 min in Colab)…\n",
+            "🕒 Now wait a few minutes before running analyses (pulls continue in background).\n",
+            "📥 Pulling models (best-effort): qwen3, phi3, llama3\n",
+            "⚙️ Using experimental client: OLLAMA_EXPERIMENT=client2\n",
+            "\n",
+            "⏳ Starting pull for qwen3:14b ...\n",
+            "    \u001b[?2026h\u001b[?25l\u001b[1G\u001b[?25h\u001b[?2026l\u001b[?2026h\u001b[?25l\u001b[1Gpulling manifest \u001b[K\n",
+            "    pulling a8cc1361f314: 100% ▕██████████████████▏ 9.3 GB                         \u001b[K\n",
+            "    pulling ae370d884f10: 100% ▕██████████████████▏ 1.7 KB                         \u001b[K\n",
+            "    pulling d18a5cc71b84: 100% ▕██████████████████▏  11 KB                         \u001b[K\n",
+            "    pulling cff3f395ef37: 100% ▕██████████████████▏  120 B                         \u001b[K\n",
+            "    pulling 78b3b822087d: 100% ▕██████████████████▏  488 B                         \u001b[K\n",
+            "    verifying sha256 digest \u001b[K\n",
+            "    writing manifest \u001b[K\n",
+            "    success \u001b[K\u001b[?25h\u001b[?2026l\n",
+            "✅ Finished pulling qwen3:14b in 0.2 seconds (exit 0)\n",
+            "✅ Model qwen3:14b available and verified.\n",
+            "\n",
+            "⏳ Starting pull for phi3 ...\n",
+            "    \u001b[?2026h\u001b[?25l\u001b[1G\u001b[?25h\u001b[?2026l\u001b[?2026h\u001b[?25l\u001b[1Gpulling manifest \u001b[K\n",
+            "    pulling 633fc5be925f: 100% ▕██████████████████▏ 2.2 GB                         \u001b[K\n",
+            "    pulling fa8235e5b48f: 100% ▕██████████████████▏ 1.1 KB                         \u001b[K\n",
+            "    pulling 542b217f179c: 100% ▕██████████████████▏  148 B                         \u001b[K\n",
+            "    pulling 8dde1baf1db0: 100% ▕██████████████████▏   78 B                         \u001b[K\n",
+            "    pulling 23291dc44752: 100% ▕██████████████████▏  483 B                         \u001b[K\n",
+            "    verifying sha256 digest \u001b[K\n",
+            "    writing manifest \u001b[K\n",
+            "    success \u001b[K\u001b[?25h\u001b[?2026l\n",
+            "✅ Finished pulling phi3 in 0.2 seconds (exit 0)\n",
+            "✅ Model phi3 available and verified.\n",
+            "\n",
+            "⏳ Starting pull for llama3 ...\n",
+            "    \u001b[?2026h\u001b[?25l\u001b[1G\u001b[?25h\u001b[?2026l\u001b[?2026h\u001b[?25l\u001b[1Gpulling manifest \u001b[K\n",
+            "    pulling 6a0746a1ec1a: 100% ▕██████████████████▏ 4.7 GB                         \u001b[K\n",
+            "    pulling 4fa551d4f938: 100% ▕██████████████████▏  12 KB                         \u001b[K\n",
+            "    pulling 8ab4849b038c: 100% ▕██████████████████▏  254 B                         \u001b[K\n",
+            "    pulling 577073ffcc6c: 100% ▕██████████████████▏  110 B                         \u001b[K\n",
+            "    pulling 3f8eb4da87fa: 100% ▕██████████████████▏  485 B                         \u001b[K\n",
+            "    verifying sha256 digest \u001b[K\n",
+            "    writing manifest \u001b[K\n",
+            "    success \u001b[K\u001b[?25h\u001b[?2026l\n",
+            "✅ Finished pulling llama3 in 0.2 seconds (exit 0)\n",
+            "✅ Model llama3 available and verified.\n",
+            "\n",
+            "✅ Using models: qwen3:14b, phi3, llama3 (primary: qwen3:14b)\n",
+            "🕐 Waiting for Ollama to settle after large model pulls...\n",
+            "✅ Ollama API responsive after 0s\n",
+            "✅ /api/chat responsive.\n",
+            "\n",
+            "🧠 Running prompts: PROMPT_1_FULL_7S, PROMPT_2_STRATEGY, PROMPT_3_STRUCTURE, PROMPT_4_SYSTEMS, PROMPT_5_SHARED_VALUES, PROMPT_6_SKILLS, PROMPT_7_STYLE, PROMPT_8_STAFF, PROMPT_9_ALIGNMENT, PROMPT_10_CHANGE, PROMPT_11_DIGITAL, PROMPT_12_BENCH, PROMPT_13_GAPS, PROMPT_14_INTEGRATION, PROMPT_15_EXEC_SUMMARY, MEGA_PROMPT\n",
+            "  ✓ PROMPT_1_FULL_7S via qwen3:14b: 5670 chars\n",
+            "  ✓ PROMPT_1_FULL_7S via phi3: 3924 chars\n",
+            "  ✓ PROMPT_1_FULL_7S via llama3: 56 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via qwen3:14b: 3938 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via phi3: 4825 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via llama3: 47 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via qwen3:14b: 3463 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via phi3: 4482 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via llama3: 33 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via qwen3:14b: 6058 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via phi3: 1880 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via llama3: 33 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via qwen3:14b: 5816 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via phi3: 62801 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 33 chars\n",
+            "  ✓ PROMPT_6_SKILLS via qwen3:14b: 3531 chars\n",
+            "  ✓ PROMPT_6_SKILLS via phi3: 4491 chars\n",
+            "  ✓ PROMPT_6_SKILLS via llama3: 33 chars\n",
+            "  ✓ PROMPT_7_STYLE via qwen3:14b: 3750 chars\n",
+            "  ✓ PROMPT_7_STYLE via phi3: 3070 chars\n",
+            "  ✓ PROMPT_7_STYLE via llama3: 33 chars\n",
+            "  ✓ PROMPT_8_STAFF via qwen3:14b: 2877 chars\n",
+            "  ✓ PROMPT_8_STAFF via phi3: 4945 chars\n",
+            "  ✓ PROMPT_8_STAFF via llama3: 366 chars\n"
           ]
         }
       ]
