--- a/7s.ipynb
+++ b/7s.ipynb
@@ -34,25 +34,10 @@
         "!pip install -q pandas tqdm matplotlib reportlab python-pptx requests\n"
       ],
       "metadata": {
-        "id": "xlMSHEIBQIpe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ec25b70a-e9a6-442f-b7a5-f140ac25d935"
+        "id": "xlMSHEIBQIpe"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/2.0 MB\u001b[0m \u001b[31m31.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m36.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/472.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m472.8/472.8 kB\u001b[0m \u001b[31m42.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/175.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -117,7 +102,7 @@
       "metadata": {
         "id": "Az5Pt0ZvjqiY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,16 +146,16 @@
       "metadata": {
         "id": "Kgshbw4ajrmw"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# ===============================================================\n",
-        "# 🧠 INSTALL, START, AND PULL OLLAMA MODELS (Colab-optimized)\n",
+        "# 🚀 OLLAMA INSTALL / START / SMART MODEL PULLER  (with speed + restart)\n",
         "# ===============================================================\n",
-        "import subprocess, shlex, requests, time, os, sys, re\n",
+        "import subprocess, shlex, requests, time, os, sys, re, math\n",
         "\n",
         "def run(cmd, check=True, quiet=False):\n",
         "    if isinstance(cmd, str):\n",
@@ -193,11 +178,11 @@
         "        return r.status_code == 200\n",
         "    except Exception: return False\n",
         "\n",
-        "# 1️⃣ Install Ollama if not yet\n",
+        "# ------------------- INSTALL -------------------\n",
         "if ollama_installed():\n",
         "    print(\"✅ Ollama already installed.\")\n",
         "else:\n",
-        "    print(\"📦 Installing Ollama…\")\n",
+        "    print(\"📦 Installing Ollama (with progress)...\")\n",
         "    proc = subprocess.Popen(\n",
         "        \"bash -lc 'curl -fSL https://ollama.com/install.sh | sh'\",\n",
         "        shell=True, text=True, stdout=subprocess.PIPE, stderr=subprocess.STDOUT\n",
@@ -205,13 +190,13 @@
         "    for line in iter(proc.stdout.readline, ''):\n",
         "        sys.stdout.write(line); sys.stdout.flush()\n",
         "    proc.wait()\n",
-        "    print(\"✅ Installation complete.\")\n",
+        "    print(\"✅ Installation complete.\" if proc.returncode == 0 else \"⚠️ Installation may have issues!\")\n",
         "\n",
-        "# 2️⃣ Start Ollama server first\n",
+        "# ------------------- START SERVER -------------------\n",
         "if ollama_running():\n",
         "    print(\"✅ Ollama already running.\")\n",
         "else:\n",
-        "    print(\"🚀 Starting Ollama serve…\")\n",
+        "    print(\"🚀 Starting ollama serve…\")\n",
         "    run(\"bash -lc 'pkill -f \\\"ollama serve\\\" || true'\", check=False, quiet=True)\n",
         "    logf = open(\"/tmp/ollama.log\", \"w\")\n",
         "    proc = subprocess.Popen([\"ollama\",\"serve\"], stdout=logf, stderr=subprocess.STDOUT, text=True)\n",
@@ -220,9 +205,7 @@
         "        print(\".\", end=\"\", flush=True); time.sleep(2)\n",
         "    print(\"\\n✅ Ollama API ready at http://127.0.0.1:11434\")\n",
         "\n",
-        "# 3️⃣ Now pull models (daemon is live)\n",
-        "models = [\"mistral\", \"llama3\", \"gemma2:9b-instruct\"]\n",
-        "models = REQUESTED_MODELS\n",
+        "# ------------------- SMART MODEL PULLER -------------------\n",
         "def model_exists(m):\n",
         "    try:\n",
         "        r = requests.get(\"http://127.0.0.1:11434/api/tags\", timeout=5)\n",
@@ -230,65 +213,120 @@
         "            names=[x[\"name\"] for x in r.json().get(\"models\",[])]\n",
         "            return any(m.startswith(x) or x.startswith(m) for x in names)\n",
         "    except: return False\n",
+        "    return False\n",
         "\n",
-        "def pull_model(m):\n",
-        "    if model_exists(m):\n",
-        "        print(f\"✅ {m} already exists.\")\n",
-        "        return True\n",
-        "    print(f\"\\n⬇️ Pulling {m} ...\")\n",
-        "    p=subprocess.Popen([\"ollama\",\"pull\",m],stdout=subprocess.PIPE,stderr=subprocess.STDOUT,text=True)\n",
-        "    prog=re.compile(r\"(\\d+)%\"); percent=0\n",
-        "    for line in iter(p.stdout.readline,\"\"):\n",
-        "        match=prog.search(line)\n",
-        "        if match:\n",
-        "            pct=int(match.group(1))\n",
-        "            bar=f\"[{'='*(pct//5):<20}]\"\n",
-        "            sys.stdout.write(f\"\\r📦 {m:<18} {bar} {pct:3d}%\")\n",
-        "            sys.stdout.flush()\n",
-        "    p.wait()\n",
-        "    print()\n",
-        "    if p.returncode==0: print(f\"✅ {m} pull complete.\"); return True\n",
-        "    else: print(f\"❌ {m} failed (exit {p.returncode})\"); return False\n",
+        "def pull_model(m, max_retries=2, stall_threshold=0.10, stall_time=300):\n",
+        "    \"\"\"\n",
+        "    Pull model with live progress, MB/s estimate, smart stall recovery,\n",
+        "    and periodic heartbeat for Colab environments.\n",
+        "    \"\"\"\n",
+        "    MODEL_SIZES = {\n",
+        "        \"mistral\": 4200, \"llama3\": 8000, \"gemma2:9b-instruct\": 9000,\n",
+        "        \"phi3\": 3800, \"gemma2:2b\": 2200\n",
+        "    }\n",
+        "    total_mb = MODEL_SIZES.get(m.lower(), 4000)\n",
+        "    attempt = 0\n",
         "\n",
+        "    while attempt <= max_retries:\n",
+        "        attempt += 1\n",
+        "        if model_exists(m):\n",
+        "            print(f\"✅ {m} already available.\")\n",
+        "            return True\n",
+        "\n",
+        "        print(f\"\\n⬇️ Pulling {m} (attempt {attempt}/{max_retries+1})...\")\n",
+        "        p = subprocess.Popen([\"ollama\", \"pull\", m],\n",
+        "                             stdout=subprocess.PIPE,\n",
+        "                             stderr=subprocess.STDOUT,\n",
+        "                             text=True, bufsize=1)\n",
+        "\n",
+        "        prog = re.compile(r\"(\\d+)%\")\n",
+        "        last_pct, last_time = 0, time.time()\n",
+        "        speed_window = []\n",
+        "        last_update = time.time()\n",
+        "        last_heartbeat = time.time()\n",
+        "        stalled = False\n",
+        "\n",
+        "        try:\n",
+        "            for line in iter(p.stdout.readline, \"\"):\n",
+        "                line = line.strip()\n",
+        "                match = prog.search(line)\n",
+        "                now = time.time()\n",
+        "\n",
+        "                if match:\n",
+        "                    pct = int(match.group(1))\n",
+        "                    dt = max(now - last_time, 0.1)\n",
+        "                    dp = pct - last_pct\n",
+        "\n",
+        "                    if dp > 0:\n",
+        "                        inst_speed = dp / dt\n",
+        "                        speed_window.append(inst_speed)\n",
+        "                        if len(speed_window) > 5:\n",
+        "                            speed_window.pop(0)\n",
+        "                        avg_speed = sum(speed_window) / len(speed_window)\n",
+        "                        last_time, last_pct = now, pct\n",
+        "                    else:\n",
+        "                        avg_speed = sum(speed_window) / len(speed_window) if speed_window else 0\n",
+        "\n",
+        "                    mb_speed = (avg_speed / 100.0) * total_mb / max(dt, 1)\n",
+        "                    eta = min(((100 - pct) / max(avg_speed, 0.01)), 9999)\n",
+        "\n",
+        "                    bar = f\"[{'='*(pct//5):<20}]\"\n",
+        "                    sys.stdout.write(\n",
+        "                        f\"\\r📦 {m:<18} {bar} {pct:3d}% | {avg_speed:4.2f}%/s | {mb_speed:5.2f} MB/s | ETA {eta:4.0f}s\"\n",
+        "                    )\n",
+        "                    sys.stdout.flush()\n",
+        "                    last_update = now\n",
+        "\n",
+        "                # Heartbeat if quiet for a while\n",
+        "                elif now - last_heartbeat > 90:\n",
+        "                    sys.stdout.write(\" 💓\")\n",
+        "                    sys.stdout.flush()\n",
+        "                    last_heartbeat = now\n",
+        "\n",
+        "                # Stall detection\n",
+        "                if now - last_update > stall_time:\n",
+        "                    print(f\"\\n⚠️ {m} stalled (no update for {stall_time}s). Restarting...\")\n",
+        "                    p.kill()\n",
+        "                    stalled = True\n",
+        "                    break\n",
+        "\n",
+        "            p.wait()\n",
+        "            print()  # newline after progress bar\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"\\n⚠️ Error while pulling {m}: {e}\")\n",
+        "            p.kill()\n",
+        "            stalled = True\n",
+        "\n",
+        "        if not stalled and p.returncode == 0:\n",
+        "            print(f\"✅ {m} pull complete.\")\n",
+        "            return True\n",
+        "        elif attempt <= max_retries:\n",
+        "            print(f\"🔁 Retrying {m} in 10 s...\")\n",
+        "            time.sleep(10)\n",
+        "        else:\n",
+        "            print(f\"❌ {m} failed (exit {p.returncode}).\")\n",
+        "            return False\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# ------------------- EXECUTE PULL -------------------\n",
+        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"gemma2:9b-instruct\"]\n",
         "print(\"\\n📥 Pulling models via running daemon...\\n\")\n",
-        "for m in models: pull_model(m)\n",
+        "\n",
+        "for m in REQUESTED_MODELS:\n",
+        "    pull_model(m)\n",
         "\n",
         "print(\"\\n📋 Models available now:\")\n",
         "!ollama list\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "s4_GiZ4epPjr",
-        "outputId": "66b77e60-73c8-4b64-bd3e-8022d94a7e5f"
+        "id": "s4_GiZ4epPjr"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Ollama already installed.\n",
-            "✅ Ollama already running.\n",
-            "\n",
-            "📥 Pulling models via running daemon...\n",
-            "\n",
-            "✅ mistral already exists.\n",
-            "✅ llama3 already exists.\n",
-            "\n",
-            "⬇️ Pulling phi4 ...\n",
-            "📦 phi4               [====================] 100%\n",
-            "✅ phi4 pull complete.\n",
-            "\n",
-            "📋 Models available now:\n",
-            "NAME              ID              SIZE      MODIFIED               \n",
-            "phi4:latest       ac896e5b8b34    9.1 GB    Less than a second ago    \n",
-            "llama3:latest     365c0bd3c000    4.7 GB    32 minutes ago            \n",
-            "mistral:latest    6577803aa9a0    4.4 GB    48 minutes ago            \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -303,22 +341,10 @@
         "PRIMARY_MODEL = models[0]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "86JKChI44VKI",
-        "outputId": "cae1e017-641a-4ca6-edd7-40430ebf0019"
+        "id": "86JKChI44VKI"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🌐 Connected to Ollama at http://127.0.0.1:11434\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -422,26 +448,10 @@
         "print(f\"🌐 Connected to Ollama at {BASE}\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "piFQ0u-Gj0NQ",
-        "outputId": "0056eb7a-a62f-4431-e97d-e4ba2f6b853b"
+        "id": "piFQ0u-Gj0NQ"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Ollama already installed.\n",
-            "🚀 Starting ollama serve…\n",
-            "⏳ Waiting for Ollama to become ready.\n",
-            "✅ Ollama API ready at http://127.0.0.1:11434\n",
-            "🌐 Connected to Ollama at http://127.0.0.1:11434\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -870,7 +880,7 @@
       "metadata": {
         "id": "OsMRUxpNkI7v"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -918,7 +928,7 @@
       "metadata": {
         "id": "MTKKxYIBkLgG"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,26 +962,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I2GPkTylQUJt",
-        "outputId": "23663c63-a648-4a5b-bb0e-46c4e4b75a22"
+        "id": "I2GPkTylQUJt"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "🧠 Running prompts: PROMPT_1_FULL_7S, PROMPT_2_STRATEGY, PROMPT_3_STRUCTURE, PROMPT_4_SYSTEMS, PROMPT_5_SHARED_VALUES, PROMPT_6_SKILLS, PROMPT_7_STYLE, PROMPT_8_STAFF, PROMPT_9_ALIGNMENT, PROMPT_10_CHANGE, PROMPT_11_DIGITAL, PROMPT_12_BENCH, PROMPT_13_GAPS, PROMPT_14_INTEGRATION, PROMPT_15_EXEC_SUMMARY, MEGA_PROMPT\n",
-            "  ✓ PROMPT_1_FULL_7S via mistral: 4660 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via llama3: 4595 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via phi4: 5002 chars\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
